# Mechanical-Keyboard

./: .gitignore  .gitignore.txt  CMakeLists.txt  Code-Formatting-Rules.docx  Keyboard.atsln  Keyboard.componentinfo.xml  Keyboard.cproj  README.md
.circleci/: Dockerfile  test.py
Keyboard/: Keyboard.cproj  main.c
Keyboard/Debug/: Keyboard.elf  Keyboard.hex  Keyboard.lss  Keyboard.map  Makefile  main.d  memoryfile.xml
Keyboard/Src/: Keyboard.c  Keyboard.h  debounce.c  debounce.h  debug.c  debug.h  gpio.c  gpio.h  keyscan.c  keyscan.h  main.c  matrix.c  matrix.h  pin_map.c  pin_map.h  systick.c  systick.h  timer.c  timer.h  user_config.c  user_config.h
Src/: USBhandler.c  USBhandler.h  assert.c  assert.h  avr_arch.h  circbuf.c  circbuf.h  debug.c  debug.h  endian.h  gcc_attributes.h  gpio.c  gpio.h  keycodes.h  main.c  matrix.c  matrix.h  mcu_drivers.h  pin_map.h  scheduler.c  scheduler.h  systick.c  systick.h  usb.c  usb.h  usb_HID.c  usb_HID.h  usb_config.h  usb_descriptors.c  usb_descriptors.h  usb_handler.c  usb_handler.h  usb_requests.h  user_config.c  user_config.h
Src/ApplicationCode/: CircBuf.c  CircBuf.h  Debug.c  Debug.h  Fsm.c  Fsm.h  Hsm.c  Hsm.h  KeyboardConfig.c  Main.c  Matrix.c  Matrix.h  Scheduler.c  Scheduler.h  SysTick.c  SysTick.h  USBFsm.c  USBFsm.h  USBHIDDeviceHsm.c  USBHIDDeviceHsm.h  USBHsm.c  USBHsm.h  USBHsm2.c  UserConfig.c  UserConfig.h
Src/Common/: Attributes.h  Endian.h
Src/UserConfig/: KeyboardConfig.h  (+2 more)
doc/: Code-Formatting-Rules.docx
src/drivers/atmel/avr/xmega/atxmegaxxxb3/: CMakeLists.txt  Gpio.c  gpio.c  gpio.h
(+176 files in other folders)
